# daprs

./: .gitignore  Cargo.toml  README.md  raug.code-workspace
benches/: bench.rs  generative1.rs
daprs-iced/: Cargo.toml
daprs-iced/examples/: demo.rs
daprs-iced/src/: builder.rs  channel.rs  runtime.rs
daprs-iced/src/widgets/: mod.rs
daprs-lua/: Cargo.toml
daprs-lua/examples/: demo.lua
daprs-lua/src/: graph.rs  graph_builder.rs  lib.rs  node_builder.rs  runtime.rs
daprs-macros/: Cargo.toml
examples/: bang.rs  buffer.rs  cond.rs  demo.py  demo.rs  expr.rs  fft.rs  list.rs  midi_in.rs  param.rs  processor.rs  run_sine.rs  serde.rs
notes/: daprs devlog 1.md  raug devlog 1.md  raug devlog 2.md
papr-egui/: Cargo.toml
papr-egui/src/graph/: mod.rs  node.rs
papr-playground/: Cargo.toml
papr-playground/src/: main.rs
papr-python/: Cargo.toml  pyproject.toml
papr-python/src/: lib.rs
raug-iced/: Cargo.toml
raug-iced/src/: channel.rs
raug-lua/: Cargo.toml
raug-macros/: Cargo.toml
raug-macros/src/: lib.rs
src/: lib.rs  message.rs  processor.rs  runtime.rs  sample.rs  signal.rs  util.rs
src/builder/: graph_builder.rs  mod.rs  node_builder.rs  static_graph_builder.rs  static_node_builder.rs
src/builtin/: env.rs  graph.rs  io.rs  math.rs  mod.rs  osc.rs  time.rs
src/builtins/: control.rs  dynamics.rs  filters.rs  list.rs  math.rs  midi.rs  mod.rs  oscillators.rs  simple_fft.rs  storage.rs  time.rs  util.rs
src/fft/: builder.rs  builtins.rs  graph.rs  mod.rs  processor.rs  signal.rs
src/fft/builtins/: complex.rs  mod.rs  real.rs  util.rs
src/graph/: asset.rs  builder.rs  edge.rs  mod.rs  node.rs
src/message/: mod.rs
src/processors/: control.rs  env.rs  graph.rs  io.rs  math.rs  mod.rs  osc.rs  time.rs
src/processors/functional/: math.rs  mod.rs  osc.rs
