[package]
name = "raug"
description = "raug - Rusty Audio Graphs"
license = "Apache 2.0 OR MIT"
version = "0.1.0"
edition = "2021"

[lib]
name = "raug"

[features]
default = []
jack = ["cpal/jack"]
serde = ["dep:serde", "petgraph/serde-1", "dep:typetag"]

[dependencies]
cpal = { version = "0.15.3", features = [] }
itertools = "0.13.0"
log = "0.4.22"
petgraph = { version = "0.6.5", features = [] }
hound = "3.5"
thiserror = "1.0"
downcast-rs = "1.2.1"
serde = { version = "1", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }
crossbeam-channel = "0.5"

[dev-dependencies]
env_logger = "0.11"
