[package]
name = "raug"
description = "raug - Rusty Audio Graphs"
license = "Apache 2.0 OR MIT"
version = "0.0.1"
edition = "2021"
documentation = "https://docs.rs/raug"

[lib]
name = "raug"

[features]
default = []
jack = ["cpal/jack"]

[dependencies]
cpal = { version = "0.15.3", features = [] }
itertools = "0.13.0"
log = "0.4.22"
petgraph = { version = "0.6.5", features = [] }
hound = "3.5"
thiserror = "1.0"
downcast-rs = "1.2.1"
rustc-hash = "2"
hashbrown = "0.15"
crossbeam-channel = "0.5"
rand = "0.8"
arrayvec = "0.7.6"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
