[package]
name = "raug"
description = "raug - Rusty Audio Graphs"
license = "MIT OR Apache-2.0"
version = "0.0.4"
edition = "2021"
documentation = "https://docs.rs/raug"
repository = "https://github.com/clstatham/raug"

[lib]
name = "raug"

[workspace]
members = ["raug-macros"]

[features]
default = []
f32_samples = []
jack = ["cpal/jack"]
expr = ["dep:evalexpr"]
serde = ["dep:serde", "dep:typetag", "dep:erased-serde", "petgraph/serde-1"]
profiling = []

[dependencies]
cpal = { version = "0.15.3", features = [] }
itertools = "0.13.0"
log = "0.4.22"
petgraph = { version = "0.6.5", features = [] }
hound = "3.5"
thiserror = "1.0"
downcast-rs = "1.2.1"
rustc-hash = "2"
hashbrown = "0.15"
crossbeam-channel = "0.5"
rand = "0.8"
midir = "0.10.0"
evalexpr = { version = "12.0", optional = true, features = [] }
smallvec = "1.13.2"
serde = { version = "1.0", optional = true }
typetag = { version = "0.2", optional = true }
erased-serde = { version = "0.4", optional = true }
raug-macros = { path = "raug-macros" }

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "expr"
required-features = ["expr"]

[[example]]
name = "serde"
required-features = ["serde"]
